--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ section {
   background: rgb(255,255,255);
   background: linear-gradient(90deg, rgba(255,255,255,1) 60%, rgba(242,242,242,1) 60%);
   background-size: cover;
+  position: relative;
 }
 nav {
   display: flex;
@@ -42,4 +43,32 @@ nav ul li a {
 .active {
   font-weight: bold;
   color: #07dbd1;
+}
+.sectiontext p:nth-child(1) {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+  color: #6d6d6d;
+  font-size: 22px;
+}
+.sectiontext p:nth-child(2) {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+  letter-spacing: 1px;
+  color: #1a1a1a;
+  font-size: 60px;
+}
+.sectiontext p:nth-child(3) {
+  color: #403e3e;
+  font-size: 30px;
+  line-height: 30px;
+}
+.sectiontext p {
+  line-height: 0;
+  margin: 45px 0 25px;
+}
+.sectiontext {
+  position: absolute;
+  left: 13%;
+  top: 42%;
+  transform: translate(-13%,-42%);
 }
