--- a/index.css
+++ b/index.css
@@ -79,3 +79,13 @@ nav ul li a {
   left: 70%;
   transform: translateX(-70%);
 }
+.about {
+  width: 80%;
+  height: 330px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  box-shadow: 2px 2px 12px rgb(0, 0, 0,0.2);
+  display: flex;
+  margin: -7% auto 20px auto;
+  position: relative;
+}
