--- a/index.css
+++ b/index.css
@@ -12,8 +12,8 @@ a {
 section {
   width: 100%;
   height: 95vh;
-  background: rgb(255,255,255);
-  background: linear-gradient(90deg, rgba(255,255,255,1) 60%, rgba(242,242,242,1) 60%);
+  background: rgb(238,238,238);
+  background: linear-gradient(90deg, rgba(238,238,238,1) 60%, rgba(204,204,204,1) 60%);
   background-size: cover;
   position: relative;
 }
@@ -109,21 +109,21 @@ nav ul li a {
 .abouttext {
   width: 250px;
   height: 200px;
-  background-color: rgb(0, 0, 0);
+  background-color: #1d1d1d;
   margin-right: 80px;
   text-align: center;
 }
 .abouttext2 {
   width: 250px;
   height: 200px;
-  background-color: rgb(0, 0, 0);
+  background-color: #1d1d1d;
   text-align: center;
   margin-right: 80px;
 }
 .abouttext3 {
   width: 250px;
   height: 200px;
-  background-color: rgb(0, 0, 0);
+  background-color: #1d1d1d;
   text-align: center;
 }
 .abouttext p {
@@ -131,4 +131,13 @@ nav ul li a {
 }
 .heading {
   text-align: center;
+  padding-top: 10px;
+}
+.projects {
+  height: 330px;
+  background-color: #1d1d1d;
+  border-radius: 20px;
+  box-shadow: 2px 2px 12px rgb(0, 0, 0,0.2);
+  margin: -3% auto 20px auto;
+  color: white;
 }
