--- a/index.css
+++ b/index.css
@@ -141,3 +141,30 @@ nav ul li a {
   margin: -3% auto 20px auto;
   color: white;
 }
+footer{
+  background: #111;
+  height: auto;
+  width: auto;
+  font-family: "Open Sans";
+  padding-top: 40px;
+  color:cyan;
+}
+.footer-content{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+  text-align: center;
+}
+.footer-content h3{
+  font-size: 1.8rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 3rem;
+}
+.footer-content p{
+  max-width: 500px;
+  margin: 10px auto;
+  line-height: 28px;
+  font-size: 14px;
+}
